--- a/static/css/style.css
+++ b/static/css/style.css
@@ -49,7 +49,7 @@ body {
 .hero {
   background: url('https://images.unsplash.com/photo-1565958011705-44e211b7e20c?w=1600') center/cover no-repeat;
   text-align: center;
-  color: #5a2e0c;
+  color: #de7523;
   padding: 100px 20px;
 }
 
